@@ -99,7 +99,7 @@ sbin_SCRIPTS = grub-install
 bin_SCRIPTS = grub-mkrescue
 
 # For grub-install.
-grub_install_SOURCES = util/powerpc/ieee1275/grub-install.in
+grub_install_SOURCES = util/ieee1275/grub-install.in
 
 # For grub-mkrescue.
 grub_mkrescue_SOURCES = util/powerpc/ieee1275/grub-mkrescue.in
